<resources>
    <string name="app_name">lab4</string>
    <string name="Text1">Notes</string>
    <string name="buttonAdd">Add note</string>
    <string name="buttonDel">Delete note</string>
    <string name="menu_add_note">Add note</string>
    <string name="menu_delete_note">Delete note</string>
    <string name="note_name">Note Name:</string>
    <string name="note_content">Note Content:</string>
    <string name="save_note">Save Note</string>
    <string name="select_note">Select Note:</string>
    <string name="delete_note">Delete Note</string>
</resources>