<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Text1"
        android:layout_width="113dp"
        android:layout_height="0dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="11dp"
        android:text="@string/Text1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddNote"
        app:layout_constraintEnd_toEndOf="@+id/NoteList"
        app:layout_constraintStart_toStartOf="@+id/buttonDeleteNote"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/NoteList"
        android:layout_width="409dp"
        android:layout_height="542dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/buttonAdd"
        app:layout_constraintStart_toEndOf="@+id/Text1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:text="@string/buttonDel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text1" />
</androidx.constraintlayout.widget.ConstraintLayout>
